; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv50_display.c_nv50_pioc_create.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv50_display.c_nv50_pioc_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nv50_pioc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_object*, i32, i32, i8*, i32, %struct.nv50_pioc*)* @nv50_pioc_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nv50_pioc_create(%struct.nouveau_object* %0, i32 %1, i32 %2, i8* %3, i32 %4, %struct.nv50_pioc* %5) #0 {
  %7 = alloca %struct.nouveau_object*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.nv50_pioc*, align 8
  store %struct.nouveau_object* %0, %struct.nouveau_object** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store %struct.nv50_pioc* %5, %struct.nv50_pioc** %12, align 8
  %13 = load %struct.nouveau_object*, %struct.nouveau_object** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i8*, i8** %10, align 8
  %17 = load i32, i32* %11, align 4
  %18 = load %struct.nv50_pioc*, %struct.nv50_pioc** %12, align 8
  %19 = getelementptr inbounds %struct.nv50_pioc, %struct.nv50_pioc* %18, i32 0, i32 0
  %20 = call i32 @nv50_chan_create(%struct.nouveau_object* %13, i32 %14, i32 %15, i8* %16, i32 %17, i32* %19)
  ret i32 %20
}

declare dso_local i32 @nv50_chan_create(%struct.nouveau_object*, i32, i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
